Fix visit details grid items overlapping

--- a/assets/sass/local.scss
+++ b/assets/sass/local.scss
@@ -271,7 +271,7 @@
 .bapv-visit-details {
   & dl, & .bapv-visit-details__restriction {
     display: grid;
-    grid-template-columns: 22% auto;
+    grid-template-columns: minmax(150px, 22%) auto;
     gap: govuk-spacing(2) govuk-spacing(3);
   }
 
